--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "autoload": {
 
-        "files": [ "array.php" ]
+        "files": [ "functions/array.php", "functions/random.php" ]
     },
     "authors": [
         {
